infra/manifests/prometheus-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-network-policy
  namespace: training
spec:
  endpointSelector:
    matchLabels:
      app: prometheus
  ingress:
    # Allow all traffic from the same namespace
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: training
  egress:
    # Allow prometheus to scrape Ray cluster metrics
    - toEndpoints:
        - matchLabels:
            ray.io/node-type: head
            k8s:io.kubernetes.pod.namespace: training
      toPorts:
        - ports:
            - port: "8265"
              protocol: TCP

    # Allow DNS queries
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
